[package]
name = "nova-minroot-vdf-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["nova-snark/cuda"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
nova-snark = { version = "0.24.0" }
hex = "0.4.3"
bellpepper-core = { version="0.2.0", default-features = false }
bellpepper = { version="0.2.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
num-bigint = { version = "0.4", features = ["serde", "rand"] }
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
bincode = "1.3.3"